# GradeResume

./: .env  README.md  main.py  pyproject.toml  state.py
Job_description/: AI.txt
prompt/: hr_pmt.txt  to_json_pmt.txt
