[project]
name = "hrai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.32",
    "pdf2image>=1.17.0",
    "pymupdf>=1.26.4",
    "pypdf>=6.0.0",
    "pytesseract>=0.3.13",
    "typhoon-ocr>=0.3.8",
    "uvicorn>=0.35.0",
]
